--- a/app/planDescription.html
+++ b/app/planDescription.html
@@ -9,8 +9,8 @@ current: index
 <div class="planBanner">
     <div class="container wrapper d_flex">
         <div class="planBanner_info">
-            <p class="fz-h1 fw-bold">計費方式說明</p>
-            <h4 class="font-default">聊天機器人幫你實現增粉、轉單、客服等目標</h4>
+            <h2 class="fz-h1 fw-bold">計費方式說明</h2>
+            <h3 class="font-default">聊天機器人幫你實現增粉、轉單、客服等目標</h3>
         </div>
         <div class="planBanner_img"></div>
     </div>
@@ -103,7 +103,7 @@ current: index
         <ul class="faqList">
             <li class="faqList_item">
                 <div class="faqList_title">
-                    <h5 class="fz-h5">我要怎麼變更方案？</h5>
+                    <h3 class="fz-h5">我要怎麼變更方案？</h3>
                     <div class="i_plus"></div>
                 </div>
                 <div class="faqList_info">
@@ -112,7 +112,7 @@ current: index
             </li>
             <li class="faqList_item">
                 <div class="faqList_title">
-                    <h5 class="fz-h5">如果我沒有LINE官方帳號怎麼辦？</h5>
+                    <h3 class="fz-h5">如果我沒有LINE官方帳號怎麼辦？</h3>
                     <div class="i_plus"></div>
                 </div>
                 <div class="faqList_info">
@@ -121,7 +121,7 @@ current: index
             </li>
             <li class="faqList_item">
                 <div class="faqList_title">
-                    <h5 class="fz-h5">非上班日有客服支援嗎？</h5>
+                    <h3 class="fz-h5">非上班日有客服支援嗎？</h3>
                     <div class="i_plus"></div>
                 </div>
                 <div class="faqList_info">
